# email-address-parser

./: .editorconfig  .gitignore  CHANGELOG.md  Generate-PerformanceReport.ps1  PERFORMANCE_NOTES.md  Performance.md  README.md
.github/workflows/: ci.yml
.test_data/: valid_domains.txt
npm-packages/: package-lock.json  package.json
npm-packages/benchmarks/: bench.js
npm-packages/regex/: LICENSE  README.md  package.json  tsconfig.json
npm-packages/regex/src/: email-address-parser-regex.ts  email-regex.ts  index.ts
npm-packages/regex/tests/: .mocharc.cjs  email-regex.spec.ts  tsconfig.json
npm-packages/wasm/: README.md  package.json
npm-packages/wasm/tests/: integration.spec.ts
npm-pkg/: README.md  email_address_parser.d.ts  package-lock.json  package.json  tsconfig.js-wrapper.json
npm-pkg/benchmarks/: bench.js  browser-runner.cjs
npm-pkg/benchmarks/browser/: index.html  page.mjs
npm-pkg/grammar/: rfc5322.peggy
npm-pkg/scripts/: build-js-runtime.cjs  generate-js-parser.cjs
npm-pkg/src/: index.mts
npm-pkg/tests/: .mocharc.js  esm-rust-suite.spec.ts  integration.spec.ts  native-parser-esm.spec.ts  ts-hook.js  tsconfig.json  wa-integration.spec.ts
resources/.test_data/: valid_local_parts.txt
rust-lib/: Cargo.toml  Development.md  README.md  build.rs
rust-lib/benches/: benchmarks.rs
rust-lib/resources/.test_data/: idns.txt  invalid_domains.txt  invalid_local_parts.txt  valid_domains.txt
rust-lib/src/: email_address.rs  generated_tests.rs  lib.rs  nom_parser.rs  rfc5322.pest
rust-lib/tests/: email_address_tests.rs  generated_tests.rs  integration_tests.rs
trash/: Cargo.toml
trash-npm-mod/: index.js  package-lock.json  package.json
trash/src/: main.rs
