[package]
name = "email-address-parser"
version = "0.3.0-rc2"
authors = ["Sayan751"]
edition = "2018"
description = "An RFC 5322 compliant email address parser."
license = "MIT"
repository = "https://github.com/Sayan751/email-address-parser"
homepage = "https://github.com/Sayan751/email-address-parser"
readme = "README.md"
keywords = ["email-address", "parser", "rfc-5322"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "email_address_parser"
crate-type = ["lib", "cdylib"]

[dependencies]
pest = "^2.1.3"
pest_derive = "^2.1.0"
wasm-bindgen = "^0.2.67"
console_error_panic_hook = "^0.1.6"

[build-dependencies]
quick-xml = "^0.18.1"

[dev-dependencies]
wasm-bindgen-test = "^0.3.17"
criterion = "^0.3.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[profile.release]
lto = true

[[bench]]
name = "benchmarks"
harness = false