[package]
name = "email-address-parser"
version = "3.0.0-rc1"
authors = ["Sayan751"]
edition = "2018"
description = "An RFC 5322, and RFC 6532 compliant email address parser."
license = "MIT"
repository = "https://github.com/Sayan751/email-address-parser"
homepage = "https://github.com/Sayan751/email-address-parser"
readme = "README.md"
keywords = ["email-address", "parser", "rfc-5322", "rfc-6532"]
exclude = ["build.rs", ".test_data", "benches", "tests", "Development.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "email_address_parser"
crate-type = ["lib", "cdylib"]

[dependencies]
nom = "^7.1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2.111"
console_error_panic_hook = "^0.1.7"

[build-dependencies]
quick-xml = "^0.39.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3.61"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "^0.8.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[profile.release]
lto = true

[[bench]]
path = "benches/benchmarks.rs"
name = "benchmarks"
harness = false
